--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.goutamkumar.github.io</span>
+   					<span>https://gautamkumar26.github.io/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
