--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
 
    			<h3>Skills</h3>
    			<p>
-   				I have experience in solving real time machine learning problems. I am well acquainted with Scikit Learn.<br>
-   				I have good working knowledge in C++ and C with sound understanding of Data Structures and Algorithms. Also I have programming experience in Python. 
+   				
+   				I have good working knowledge in C++ and C with sound understanding of Data Structures and Algorithms. Also I have competitive coding experience. <br>
+				I have begineer experience in solving real time basic machine learning problems.
    			</p>
 
 				<!--<ul class="skill-bars">
@@ -190,7 +191,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="Goutam_kumar_CV.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="Goutam_kumar_cv_oyo.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -314,7 +315,7 @@
 	   				<div class="timeline-header">
 	   					<h3>Senior Secondary School</h3>
 	   					<p>April 2012 - May 2014<br>
-	   					90.40%</p>
+	   					89.40%</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -403,7 +404,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/store.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/store.jpg" alt="Store and purchase management system">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
