--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	   			<h1>I'm Goutam Kumar.</h1>
 
 	   			<p class="intro-position">
-	   				<span>CSE UNDERGRADUATE</span>
-	   				<span>NIT JAMSHEDPUR</span> 
+					<span>APPLICATIONS DEVELOPER (ORACLE)</span>
+	   				<span>CSE GRADUATE (NIT JAMSHEDPUR)</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
