--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
    				<img src="images/my-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Goutam Kumar, pursuing BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur. I am broadly interested in Machine Learning, Website Development, and competitive programming.</p>
+   				<p class="lead">I am Goutam Kumar, working as an Applications Developer at Oracle India Pvt. Ltd. I did my BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur.</p>
    			</div>   			
 
    		</div>   		
@@ -134,7 +134,7 @@
    				</li>
    				<li>
    					<strong>Area of Interest:</strong>
-   					<span>Machine Learning, Data Structures, Web Development</span>
+   					<span>Software development, Data Structures, Web Development</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
