--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="Goutam_kumar_cv_oyo.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="goutam_kumar_new_cv.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
