--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/amazon-revew.png" alt="Liberty">
+	               	<img src="images/portfolio/amazon-revew.png" alt="Amazon Review System Analysis">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -461,7 +461,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/daa.jpg"alt="Clouds">
+	               	<img src="images/portfolio/daa.jpg"alt="Data Integration Tool">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -477,7 +477,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/nitwesite.png" alt="Beetle">
+	               	<img src="images/portfolio/nitwesite.png" alt="Nit Jamshedpur Website">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -493,7 +493,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/s.jpg" alt="Lighthouse">
+	               	<img src="images/portfolio/s.jpg" alt="Build System">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
