--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
    		<div class="col-twelve">
 
    			<!-- portfolio-wrapper -->
-	         <div id="folio-wrapper" class="block-1-1 block-mob-full stack">
+	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/amazon-revew.png" alt="Amazon Review System Analysis">
+	               	<img src="images/portfolio/image (1).png" alt="Amazon Review System Analysis">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -445,7 +445,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/stoe.jpg" alt="Store and purchase management system">
+	               	<img src="images/portfolio/image (2).png" alt="Store and purchase management system">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -461,7 +461,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/daa.jpg"alt="Data Integration Tool">
+	               	<img src="images/portfolio/image (3).png"alt="Data Integration Tool">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -477,7 +477,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/nitwesite.png" alt="Nit Jamshedpur Website">
+	               	<img src="images/portfolio/image (4).png" alt="Nit Jamshedpur Website">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -493,11 +493,27 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/s.jpg" alt="Build System">
+	               	<img src="images/portfolio/image (5).png" alt="Build System">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Build System</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  c++
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+					
+					<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/image (6).png" alt="Build System">
+	                  <a href="#modal-05" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Upcoming Project..</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  c++
 		     					      </span>		     		
