--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 	   			<h1>I'm Goutam Kumar.</h1>
 
 	   			<p class="intro-position">
-					<span>APPLICATIONS DEVELOPER (ORACLE)</span>
+					<span>SOFTWARE ENGINEER (QUALCOMM)</span>
+					<span>EX-ORACLE</span>
 	   				<span>CSE GRADUATE (NIT JAMSHEDPUR)</span>
 	   			</p>
 
@@ -110,7 +111,7 @@
 
    				<img src="images/my-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Goutam Kumar, working as an Applications Developer at Oracle India Pvt. Ltd. I did my BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur.</p>
+   				<p class="lead">I am Goutam Kumar, working as a Software Engineer at Qualcomm India. I did my BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur.</p>
    			</div>   			
 
    		</div>   		
@@ -121,7 +122,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I love exploring and learning about new technical things that excite me. Currently  I am working on a product named P6 Professional, which is a standard project management software tool. I have developed it's latest enhancement "Multiple User Portfolio".
+   			<p>I love exploring and learning about new technical things that excite me. Currently  I am working as a backend developer and integrator in modem team.
 			I like solving algorithmic problems in competitive coding and solve real world problems using Machine Learning Algorithms.</p>
 
    			<ul class="info-list">
@@ -135,7 +136,7 @@
    				</li>
    				<li>
    					<strong>Area of Interest:</strong>
-   					<span>Software development, Data Structures, Web Development</span>
+   					<span>Software development, Data Structures, Web Development (Full Stack)</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -155,9 +156,9 @@
    			<h3>Skills</h3>
    			<p>
    				
-   				C++ (Programming), C, Core JAVA <br>
-				Data Structures, Algorithms, Operating Systems, DBMS <br>
-				Tools: Codeblocks, Devc++, OracleSQLDeveloper, MSSQLServer, MySQL, VisualStudio, PrimaveraP6, Sublime. 
+   				C++ (Programming), C, Core JAVA, JavaScript<br>
+				Data Structures, Algorithms, Operating Systems, DBMS, HTML, CSS, XML, Python(Scripts) <br>
+				Tools/Frameworks: Codeblocks, Devc++, OracleSQLDeveloper, MSSQLServer, MySQL, VisualStudio, PrimaveraP6, Axiom, NodeJS, AngularJS. 
    			</p>
 
 				<!--<ul class="skill-bars">
@@ -222,6 +223,35 @@
    			<h2>Work Experience</h2>
 
    		</div> <!-- /resume-header -->
+		
+		<div class="col-twelve">
+
+   			<div class="timeline-wrap">
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Software Engineer</h3>
+	   					<p>March 2020 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Qualcomm India.</h4>
+	   					<p>
+	   					</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+	   			
+
+   			</div> <!-- /timeline-wrap -->   			
+
+   		</div> <!-- /col-twelve -->
 
    		<div class="col-twelve">
 
@@ -235,7 +265,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Applications Developer</h3>
-	   					<p>June 2019 - Present</p>
+	   					<p>June 2019 - March 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
