--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	   			<h1>I'm Goutam Kumar.</h1>
 
 	   			<p class="intro-position">
-					<span>SOFTWARE ENGINEER (QUALCOMM)</span>
-					<span>EX-ORACLE</span>
+					<span>MTS-2 (BYJU'S)</span>
+					<span>EX- QUALCOMM, ORACLE</span>
 	   				<span>CSE GRADUATE (NIT JAMSHEDPUR)</span>
 	   			</p>
 
@@ -111,7 +111,7 @@
 
    				<img src="images/my-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Goutam Kumar, working as a Software Engineer at Qualcomm India. I did my BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur.</p>
+   				<p class="lead">I am Goutam Kumar, working as a Member of Technical Staff 2 at Byju's. I did my BTech in Computer Science and Engineering from National Institute of Technology Jamshedpur.</p>
    			</div>   			
 
    		</div>   		
@@ -122,8 +122,8 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I love exploring and learning about new technical things that excite me. Currently  I am working as a backend developer and integrator in modem team.
-			I like solving algorithmic problems in competitive coding and solve real world problems using Machine Learning Algorithms.</p>
+   			<p>I love solving complex software design problems. Currently I am working as a Member of Technical Staff 2 responsible for designing and developing java microservices for TTH horizontal platform.
+			In my spare time, like solving algorithmic problems in competitive coding and solve real world problems using Machine Learning Algorithms.</p>
 
    			<ul class="info-list">
    				<li>
@@ -136,7 +136,7 @@
    				</li>
    				<li>
    					<strong>Area of Interest:</strong>
-   					<span>Software development, Data Structures, Web Development (Full Stack)</span>
+   					<span>Software development, Backend development</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -156,9 +156,9 @@
    			<h3>Skills</h3>
    			<p>
    				
-   				C++ (Programming), C, Core JAVA, JavaScript<br>
-				Data Structures, Algorithms, Operating Systems, DBMS, HTML, CSS, XML, Python(Scripts) <br>
-				Tools/Frameworks: Codeblocks, Devc++, OracleSQLDeveloper, MSSQLServer, MySQL, VisualStudio, PrimaveraP6, Axiom, NodeJS, AngularJS. 
+   				C++, Java, C, Python<br>
+				SpringBoot, Spring Batch, System design, AWS, Rest API services, Microservices, Design patterns, MongoDB, Data Structures, Algorithms, Operating Systems <br>
+				Tools/Frameworks: Codeblocks, Devc++, OracleSQLDeveloper, MSSQLServer, MySQL, VisualStudio, IntellijIdea, PrimaveraP6. 
    			</p>
 
 				<!--<ul class="skill-bars">
@@ -223,6 +223,35 @@
    			<h2>Work Experience</h2>
 
    		</div> <!-- /resume-header -->
+
+		<div class="col-twelve">
+
+   			<div class="timeline-wrap">
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Member of Technical Staff 2</h3>
+	   					<p>September 2022 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Byju's</h4>
+	   					<p>
+	   					</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+	   			
+
+   			</div> <!-- /timeline-wrap -->   			
+
+   		</div> <!-- /col-twelve -->
 		
 		<div class="col-twelve">
 
@@ -236,7 +265,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Software Engineer</h3>
-	   					<p>March 2020 - Present</p>
+	   					<p>March 2020 - September 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
