--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>https://gautamkumar26.github.io/</span>
+   					<span>https://goutamkumar1.github.io/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
