--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="goutam_kumar_new_cv.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="goutam_kumar_resume.pdf" target="_blank" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
@@ -839,7 +839,7 @@
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/gautam.ngs"><i class="fa fa-facebook"></i></a></li>
 			      <li><a href="https://www.linkedin.com/in/gautam26/"><i class="fa fa-linkedin"></i></a></li>
-			      <li><a href="https://github.com/gautamkumar26"><i class="fa fa-github"></i></a></li>
+			      <li><a href="https://github.com/goutamkumar1"><i class="fa fa-github"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
