--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="goutam_kumar_resume.pdf" target="_blank" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="Goutam_Kumar.pdf" target="_blank" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
