--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-	         	<div class="bgrid folio-item">
+<!-- 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (1).png" alt="Amazon Review System Analysis">
+	               	<img src="" alt="Amazon Review System Analysis">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -496,15 +496,30 @@
 		     					    	 <span class="folio-types">
 		     					       	  Machine Learning
 		     					       </span>
-		     					   </div>	                      	
+		     		</div>	                      	
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div> <!-- /folio-item -->
+	        		</div> <!-- /folio-item --> -->
+			<div class="bgrid folio-item">
+	                    <div class="item-wrap">
+	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;"></div>
+	                        <a href="#modal-01" class="overlay">
+	                            <div class="folio-item-table">
+	                                <div class="folio-item-cell">
+	                                    <h3 class="folio-title">Amazon Review System Analysis</h3>
+	                                    <span class="folio-types">
+	                                        Machine Learning
+	                                    </span>
+	                                </div>
+	                            </div>
+	                        </a>
+	                    </div>
+	                </div> <!-- /folio-item -->
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (2).png" alt="Store and purchase management system">
+	               	<img src="" alt="Store and purchase management system">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -520,7 +535,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (3).png"alt="Data Integration Tool">
+	               	<img src=""alt="Data Integration Tool">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -536,7 +551,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (4).png" alt="Nit Jamshedpur Website">
+	               	<img src="" alt="Nit Jamshedpur Website">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -552,7 +567,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (5).png" alt="Build System">
+	               	<img src="" alt="Build System">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -568,7 +583,7 @@
 					
 					<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/image (6).png" alt="Build System">
+	               	<img src="" alt="Build System">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
