--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 	        		</div> <!-- /folio-item --> -->
 			<div class="bgrid folio-item">
 	                    <div class="item-wrap">
-	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;"></div>
+	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div>
 	                        <a href="#modal-01" class="overlay">
 	                            <div class="folio-item-table">
 	                                <div class="folio-item-cell">
@@ -519,7 +519,8 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Store and purchase management system">
+<!-- 	               	<img src="" alt="Store and purchase management system"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Store and Purchase Management System</div>
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -535,7 +536,8 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src=""alt="Data Integration Tool">
+<!-- 	               	<img src=""alt="Data Integration Tool"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Data Integration Tool</div>
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -551,7 +553,8 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Nit Jamshedpur Website">
+<!-- 	               	<img src="" alt="Nit Jamshedpur Website"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Nit Jamshedpur Website</div>
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -567,7 +570,8 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Build System">
+<!-- 	               	<img src="" alt="Build System"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Build System</div>
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -583,7 +587,8 @@
 					
 					<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="" alt="Build System">
+<!-- 	               	<img src="" alt="Build System"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Upcoming Project..</div>
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
