--- a/index.html
+++ b/index.html
@@ -466,56 +466,258 @@
 
 	<!-- Portfolio Section
    ================================================== -->
-	
-<!-- =================================================== -->
 	<section id="portfolio">
-	    <div class="container">
-	        <div class="section-intro">
-	            <h2>Portfolio</h2>
-	            <p>Explore some of my recent projects.</p>
-	        </div>
-	
-	        <div class="portfolio-content">
-	            <div class="portfolio-grid">
-	                <!-- Portfolio Items -->
-	                <div class="portfolio-item">
-	                    <div class="portfolio-image">
-	                        <img src="images/project1.jpg" alt="Project 1">
-	                        <div class="overlay">
-	                            <div class="overlay-content">
-	                                <h3>Amazon Review System Analysis</h3>
-	                                <p>Machine Learning</p>
-	                                <a href="#modal-01" class="popup-modal">View Details</a>
-	                            </div>
-	                        </div>
-	                    </div>
-	                </div>
-	
-	                <!-- Add more portfolio items here -->
-	
-	            </div>
-	        </div>
-	    </div>
-	
-	    <!-- Modal Popups -->
-	    <div id="modal-01" class="popup-modal">
-	        <div class="modal-content">
-	            <div class="modal-header">
-	                <h2>Amazon Review System Analysis</h2>
-	                <a href="#" class="modal-close">&times;</a>
-	            </div>
-	            <div class="modal-body">
-	                <img src="images/portfolio/modals/amazon-review.png" alt="Project 1">
-	                <p>Description of the project goes here.</p>
-	                <p>Category: Machine Learning</p>
-	                <a href="https://github.com/gautamsingh722/review-management-system">GitHub Repository</a>
-	            </div>
-	        </div>
-	    </div>
-	
-	    <!-- Add more modal popups for other projects -->
 
-</section>
+		<div class="row section-intro">
+   		<div class="col-twelve">
+
+   			<h5>Portfolio</h5>
+   			<h1>Check Out Some of My Works.</h1>
+
+   			<p class="lead"></p>
+
+   		</div>   		
+   	</div> <!-- /section-intro--> 
+
+   	<div class="row portfolio-content">
+
+   		<div class="col-twelve">
+
+   			<!-- portfolio-wrapper -->
+	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+
+<!-- 	         	<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="" alt="Amazon Review System Analysis">
+	                  <a href="#modal-01" class="overlay">	                  	           
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+		     					       <h3 class="folio-title">Amazon Review System Analysis</h3>	     					    
+		     					    	 <span class="folio-types">
+		     					       	  Machine Learning
+		     					       </span>
+		     		</div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>	               
+	        		</div> <!-- /folio-item --> -->
+			<div class="bgrid folio-item">
+	                    <div class="item-wrap">
+	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div>
+	                        <a href="#modal-01" class="overlay">
+	                            <div class="folio-item-table">
+	                                <div class="folio-item-cell">
+	                                    <h3 class="folio-title">Amazon Review System Analysis</h3>
+	                                    <span class="folio-types">
+	                                        Machine Learning
+	                                    </span>
+	                                </div>
+	                            </div>
+	                        </a>
+	                    </div>
+	                </div> <!-- /folio-item -->
+
+	        		<div class="bgrid folio-item">
+	               <div class="item-wrap">
+<!-- 	               	<img src="" alt="Store and purchase management system"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Store and Purchase Management System</div>
+	               	<a href="#modal-02" class="overlay">              		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Store and Purchase Management System</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Web Portal
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+<!-- 	               	<img src=""alt="Data Integration Tool"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Data Integration Tool</div>
+	                  <a href="#modal-03" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Data Integration Tool</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Python 
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+<!-- 	               	<img src="" alt="Nit Jamshedpur Website"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Nit Jamshedpur Website</div>
+	                  <a href="#modal-04" class="overlay">                  	                 
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Nit Jamshedpur Website</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Website development
+		     					      </span>		     		
+		     					   </div>  	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->     
+
+	        		<div class="bgrid folio-item">
+	               <div class="item-wrap">
+<!-- 	               	<img src="" alt="Build System"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Build System</div>
+	                  <a href="#modal-05" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Build System</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  c++
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+					
+					<div class="bgrid folio-item">
+	               <div class="item-wrap">
+<!-- 	               	<img src="" alt="Build System"> -->
+			       <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Upcoming Project..</div>
+	                  <a href="#modal-05" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Upcoming Project..</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  c++
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+
+	            
+
+	            <!-- modal popups - begin
+	            ============================================================= -->
+	            <div id="modal-01" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/amazon-review.png" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Amazon Review System Analysis</h4>		      
+					      <p></p>
+
+					      <div class="categories">Machine Learning</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="https://github.com/gautamsingh722/review-management-system">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-01 -->
+
+				   <div id="modal-02" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/store.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Store and Purchase Management System</h4>		      
+					      <p></p>
+
+					      <div class="categories">Web Portal</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="https://github.com/gautamsingh722/store-purchase-management-system">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-02 -->
+
+				   <div id="modal-03" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/data.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Data Integration Tool</h4>		      
+					      <p></p>
+
+					      <div class="categories">Python</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="http://www.behance.net">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-03 -->
+
+				   <div id="modal-04" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/nitwebsite.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Nit Jamshedpur Website</h4>		      
+					      <p></p>
+
+					      <div class="categories">Web Development</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="http://www.nitjsr.ac.in/">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-04 -->
+
+				   <div id="modal-05" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/bs.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Build System</h4>		      
+					      <p></p>
+
+					      <div class="categories">c++</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="https://github.com/gautamsingh722/build-system-sublime">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-05 -->
+
+
+
+				   <!-- modal popups - end
+	            ============================================================= -->
+
+	         </div> <!-- /portfolio-wrapper --> 
+
+   		</div>  <!-- /twelve -->   
+
+   	</div> <!-- /portfolio-content --> 
+		
+	</section> <!-- /portfolio --> 
 
 
 
