--- a/index.html
+++ b/index.html
@@ -503,7 +503,15 @@
 	        		</div> <!-- /folio-item --> -->
 			<div class="bgrid folio-item">
 	                    <div class="item-wrap">
-	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div>
+				    <div class="folio-item-table">
+	                                <div class="folio-item-cell">
+	                                    <h3 class="folio-title">Amazon Review System Analysis</h3>
+	                                    <span class="folio-types">
+	                                        Machine Learning
+	                                    </span>
+	                                </div>
+	                            </div>
+<!-- 	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div> -->
 	                        <a href="#modal-01" class="overlay">
 	                            <div class="folio-item-table">
 	                                <div class="folio-item-cell">
