--- a/index.html
+++ b/index.html
@@ -486,32 +486,10 @@
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-<!-- 	         	<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="" alt="Amazon Review System Analysis">
-	                  <a href="#modal-01" class="overlay">	                  	           
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Amazon Review System Analysis</h3>	     					    
-		     					    	 <span class="folio-types">
-		     					       	  Machine Learning
-		     					       </span>
-		     		</div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>	               
-	        		</div> <!-- /folio-item --> -->
 			<div class="bgrid folio-item">
 	                    <div class="item-wrap">
-				    <div class="folio-item-table">
-	                                <div class="folio-item-cell">
-	                                    <h3 class="folio-title">Amazon Review System Analysis</h3>
-	                                    <span class="folio-types">
-	                                        Machine Learning
-	                                    </span>
-	                                </div>
-	                            </div>
-<!-- 	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div> -->
+<!-- 				    <img src="" alt="Amazon Review System Analysis"> -->
+	                        <div class="placeholder" style="background-color: #eee; width: 100%; height: 200px;">Amazon Review System Analysis</div>
 	                        <a href="#modal-01" class="overlay">
 	                            <div class="folio-item-table">
 	                                <div class="folio-item-cell">
