--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>gautamsingh722@gmail.com</span>
+   					<span>goutamkumar2607@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -812,7 +812,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>gautamsingh722@gmail.com			     
+   			<p>goutamkumar2607@gmail.com			     
 			   </p>
 
    		</div>
